<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.NowPlayingFragment">


    <ImageView
        android:id="@+id/song_art"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/default_album_art" />


    <TextView
        android:id="@+id/song_name_nowplaying_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Song Name"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_art" />

    <TextView
        android:id="@+id/album_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Album Name"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_name_nowplaying_fragment" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="Artist Name"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/album_name" />


    <ImageButton
        android:id="@+id/play-pause-button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPlayPause"
        android:src="@drawable/play"
        app:layout_constraintBottom_toBottomOf="@+id/play_previous_button_nowplaying_fragment"
        app:layout_constraintEnd_toStartOf="@+id/play_next_button_nowplaying_fragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play_previous_button_nowplaying_fragment"
        app:layout_constraintTop_toTopOf="@+id/play_previous_button_nowplaying_fragment" />


    <ImageButton
        android:id="@+id/play_previous_button_nowplaying_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPlayPrevious"
        android:src="@drawable/previous"
        app:layout_constraintBottom_toBottomOf="@+id/shuffle_button"
        app:layout_constraintEnd_toStartOf="@+id/play-pause-button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shuffle_button"
        app:layout_constraintTop_toTopOf="@+id/shuffle_button" />

    <ImageButton
        android:id="@+id/play_next_button_nowplaying_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickPlayNext"
        android:src="@drawable/next"
        app:layout_constraintBottom_toBottomOf="@+id/play-pause-button"
        app:layout_constraintEnd_toStartOf="@+id/repeat_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play-pause-button"
        app:layout_constraintTop_toTopOf="@+id/play-pause-button" />

    <ImageButton
        android:id="@+id/shuffle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="onClickShuffle"
        android:src="@drawable/shuffle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/play_previous_button_nowplaying_fragment"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar" />

    <ImageButton
        android:id="@+id/repeat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickRepeat"
        android:src="@drawable/repeat"
        app:layout_constraintBottom_toBottomOf="@+id/play_next_button_nowplaying_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play_next_button_nowplaying_fragment"
        app:layout_constraintTop_toTopOf="@+id/play_next_button_nowplaying_fragment" />

    <TextView
        android:id="@+id/song_duration"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="0:00"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <TextView
        android:id="@+id/current_position"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="0:00"
        android:textAlignment="center"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />


    <SeekBar
        android:id="@+id/seek_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />


</android.support.constraint.ConstraintLayout>