<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.HomeActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Songs"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/parental_control_status"
        android:layout_width="wrap_content"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:layout_editor_absoluteY="48dp" />

    <ImageButton
        android:id="@+id/play_previous_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="8dp"
        android:focusable="false"
        android:onClick="onClickPlayPrevious"
        android:src="@drawable/previous"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/play-pause"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parental_control_status" />

    <ImageButton
        android:id="@+id/play-pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/play"
        android:textStyle="bold"
        android:onClick="onClickPlayPause"
        app:layout_constraintBottom_toBottomOf="@+id/play_previous_button"
        app:layout_constraintEnd_toStartOf="@+id/play_next_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play_previous_button"
        app:layout_constraintTop_toTopOf="@+id/play_previous_button" />

    <ImageButton
        android:id="@+id/play_next_button"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:focusable="false"
        android:src="@drawable/next"
        android:textSize="15sp"
        android:textStyle="bold"
        android:onClick="onClickPlayNext"
        app:layout_constraintBottom_toBottomOf="@+id/play-pause"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/play-pause"
        app:layout_constraintTop_toTopOf="@+id/play-pause" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/queueList"
        app:layout_constraintTop_toBottomOf="@+id/play_previous_button">

        <ListView
            android:id="@+id/songList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGray"
            app:layout_constraintBottom_toTopOf="@+id/queueList"
            app:layout_constraintTop_toBottomOf="@+id/play_previous_button" />

    </LinearLayout>

    <Button
        android:id="@+id/queueList"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:onClick="onClickViewQueue"
        android:text="Queue"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@+id/song_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/song_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</android.support.constraint.ConstraintLayout>